--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,12 @@
     <p>E-mail:-gautamrockz2000@gmail.com</p>
     <h3>Your Details:</h3>
     <hr>
-    <form action="mailto:info@gmail.com" method="post" enctype="text/plain">
-      <label>Your Name:</label>
+    <form action="mailto:gautamrockz2000@gmail.com" method="post" enctype="text/plain">
+      <label>Your Name:</label><br>
       <input type="text" name="Name" value=""><br>
-      <label>Your Email:</label>
+      <label>Your Email:</label><br>
       <input type="email" name="E-mail" value=""><br>
-      <label>Message:</label>
+      <label>Message:</label><br>
     <textarea name="name" rows="10" cols="30"></textarea><br>
       <input type="submit" name=""><br>
     </form>
