--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <label>Your Email:</label><br>
       <input type="email" name="E-mail" value=""><br>
       <label>Message:</label><br>
-    <textarea name="name" rows="10" cols="30"></textarea><br>
+    <textarea name="Message" rows="10" cols="30"></textarea><br>
       <input type="submit" name=""><br>
     </form>
   </body>
